[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neburst"
version = "0.1.0"
description = "Python SDK for Neburst OpenAPI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://neburst.com"
Documentation = "https://docs.neburst.com"

[tool.setuptools.packages.find]
include = ["neburst*"]
