[package]
name = "neburst-api"
version = "0.1.0"
edition = "2021"
description = "Neburst OpenAPI SDK for Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
urlencoding = "2"
base64 = "0.22"
